--- a/style/index.css
+++ b/style/index.css
@@ -16,22 +16,40 @@ body::before {
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: 0.3;
+    opacity: 0.5;
     /* Ajuste a opacidade conforme necessário */
 }
-
+input::placeholder {
+    color: rgb(29, 251, 0);
+}
+input:focus {
+    outline: none;
+}
+.modal-content{
+    border: none;
+    
+  }
 body {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+  
 
+}
+.card-modal{
+
+   box-shadow: 0px 5px 5px 5px  rgba(29,251,0);
+}
+.card:hover{
+transform: scale(1.05);
+transition: 0.5s;
+}
 
 header {
   
-    width: auto;
-    padding-top: 5%;
+    width: 100%;
+    
     padding-bottom: 5%;
     font-size: 20px;
     height: 20%;
@@ -39,9 +57,10 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+ 
 }
 h1{
+    font-weight: 1000;
     color: rgb(4, 255, 0);
 }
 
@@ -50,157 +69,70 @@ div#search {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 90%;
+    width: 100%;
     padding: 1%;
     border-radius: 10px;
-    border: 1px solid rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
 }
 
 input {
+
     background: transparent;
     border: none;
     margin-right: 1%;
     width: 100%;
     padding: 1%;
 }
-
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    width: 80%;
-    height: 70%;
+main{
+    width: 95%;
 }
-
-img {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
-    width: 50%;
-    height: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 5%;
-
-}
-
-#img {    
-    box-shadow: none;
-    width: 20%;
-    margin-left: 0%;
-}
-
-footer {
-   display: flex; justify-content: center; align-items: center;
-    height: 200px;
-    background: #01410e;
+#img-footer{
     width: 100%;
-    position: relative;
-    bottom: 0%;
-    color: black;
 }
 
-.roll {
-
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-
-    height: 30%;
+.bg-btn-br{
+    color: aliceblue;
+    background-image: radial-gradient( rgb(0, 255, 76) 0%, rgb(0, 227, 30) 0%, rgb(0, 0, 0) 100%);
+}
+footer{
     width: 100%;
-
+    font-size: small;
 }
-
-.roll>div {
-    border-bottom: 2px solid rgb(228, 228, 228);
+bg-transparent{
+    background: transparent;
 }
-
-.card {
-    margin-bottom: 10%;
-    padding-left: 10%;
-    display: flex;
-    height: 50%;
-    width: 50%;
-    padding-bottom: 5%;
-    box-sizing: border-box;
-}
-
-h2 {
-    font-size: 2vw;
-    color: white
-}
-
-p {
-    font-size: 1.5vw;
-    color: white
-}
-
-.dados,
-h2,p {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-     margin-left: 5%;
-}
-
-/* Responsividade para dispositivos menores */
-@media screen and (max-width: 768px) {
-    .dados {
-        max-width: 80%;
+@keyframes pulse {
+    0% {
+      transform: scale(1);
     }
-}
-
-#paginnation {
-   
-    width: 50%;
-    margin-bottom: 5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-
-}
-#paginnation > button{
-border-radius: 5px;
-background-color: #00ff33;
-color: rgb(34, 34, 34);
-padding: 1%;
-margin: 1%;
-}
-
-
-/* Responsividade para dispositivos menores */
-@media screen and (max-width: 768px) {
-    body {
-        align-items: stretch;
+    50% {
+      transform: scale(1.05);
     }
-
-    main {
-        width: 100%;
+    100% {
+      transform: scale(1);
     }
+  }
+  
+  /* Aplicando a animação ao campo de busca */
+  #searchInput:focus {
+    animation: pulse 1s infinite;
+  }
 
-    .roll {
-        height: auto;
-        padding-bottom: 0;
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
     }
-
-    .card {
-        margin-top: 5%;
-        width: 90%;
+    100% {
+      opacity: 1;
+      transform: translateY(0);
     }
-}
-
-/* Responsividade para dispositivos muito pequenos */
-@media screen and (max-width: 480px) {
-
-    p,
-    input {
-        width: 100%;
-    }
-
-    .card {
-        flex-direction: column;
-        width: 90%;
-    }
-}
+  }
+  
+  /* Aplicando a animação às imagens */
+  .card-img-top {
+    animation: fadeIn 0.5s ease-out;
+  }
+  
+  
